# nxgl

./: .gitignore  Application.hpp  ApplicationContext.hpp  CMakeLists.txt  Logger.hpp  Pch.hpp  Standards.hpp  main.cpp  readme.md
ecs/: Components.hpp
gfx/: Primitives.hpp  Standards.hpp
gfx/primitives/: GLBlend.hpp  GLBounds.hpp  GLBuffer.hpp  GLCamera.hpp  GLData.cpp  GLData.hpp  GLFbo.hpp  GLIbo.hpp  GLModel.hpp  GLObject.hpp  GLPolygon.hpp  GLShader.cpp  GLShader.hpp  GLUtility.cpp  GLUtility.hpp  GLVao.hpp  GLVbo.hpp
gfx/shapes/: GLObject.hpp  GLPolygon.hpp  GLTriangleCircle.hpp  IColorable.hpp  IGenerator.hpp  IMVPApplicator.hpp  NXDefaultShader.cpp  NXDefaultShader.hpp  NXObject.hpp  NXShape.cpp  NXShape.hpp  NXSharedShape.cpp  NXSharedShape.hpp  NXSharedShapeContainer.cpp  NXSharedShapeContainer.hpp  NXTriangle.hpp  Polygon.hpp  Rectangle.hpp  Shape.hpp  ShapeShader.hpp  Shapes.hpp  Triangle.hpp  TriangleData.hpp
gfx/shapes/generators/: BarycentricGenerator.hpp  PolygonGenerator.hpp
gfx/standards/: Clock.hpp  Definitions.hpp
gfx/v2/: NXVbo.hpp
resources/: DefaultFragment.glsl  DefaultVertex.glsl
resources/test/: Fragment.glsl  Geometry.glsl  Vertex.glsl
tests/: TestPrimitives.hpp  TestShaders.hpp
ui/: EventDistributor.hpp  EventReceiver.hpp  ImguiDockProviderReceiver.hpp  ImguiMainWindowReceiver.hpp  ImguiPerformanceReceiver.hpp  ImguiPropertiesReceiver.hpp  ImguiWrapperReceiver.hpp
utilities/: Clock.hpp  Definitions.hpp  Math.hpp
